# order-microservice/src/OrderController.ts
@@ -1,5 +1,4 @@
 import { Mongoose, default as mongoose } from "mongoose";
-import { rootCertificates } from "tls";
 import {
   Controller,
   Get,
@@ -7,12 +6,15 @@ import {
   Body,
   Route,
   Query,
-  OperationId,
+  Request
 } from "tsoa";
-import { OrderDto, OrderEvent } from "./Order";
+import { OrderDto, OrderEvent, OrdersDto } from "./Order";
 import { ErrorResponse, isErrorResponse, Orders } from "./Orders";
 
-export const errorResponse = (p: { message: string }) => ({ error: true, message: p.message }) as ErrorResponse;
+export const errorResponse = <T = {}>(p: { message: string }) => ({ error: true, message: p.message }) as ErrorResponse<T>;
+export const okResponse = <T>(data: T) => ({ error: false, data: data }) as ErrorResponse<T>;
+
+type Empty = {};
 
 @Route("order")
 export class OrderController extends Controller {
@@ -23,7 +25,7 @@ export class OrderController extends Controller {
     data: {
       id: string
     }
-  ): Promise<ErrorResponse> {
+  ): Promise<ErrorResponse<Empty>> {
     // Todo: Pattern mediator.
     const r = (await Orders.SendOrderCommand({ id: data.id,  type: 'SendOrderCommand' }));
     if (isErrorResponse(r)) return r;
@@ -35,7 +37,7 @@ export class OrderController extends Controller {
   public async add(
     @Body()
     vm: Orders.ViewModel
-  ): Promise<ErrorResponse> {
+  ): Promise<ErrorResponse<Empty>> {
     // Todo: Pattern mediator.
     const r = (await Orders.CreateOrderCommand({ ...vm, type: 'CreateOrderCommandEvent' }));
     if (isErrorResponse(r)) return r;
@@ -46,17 +48,26 @@ export class OrderController extends Controller {
   public async pay(
     @Query('amount')amount: number,
     @Query('id')id: string,
-  ): Promise<ErrorResponse> {
+  ): Promise<ErrorResponse<Empty>> {
     // Todo: Pattern mediator.
     const r = (await Orders.PayOrderCommand({ id, amount, type: 'PayForOrderCommand' }));
     if (r)
-      return r as ErrorResponse;
+      return r as ErrorResponse<{}>;
 
     return { error: true, message: 'Unknown error' };
   }
 
   @Get("all")
-  public async all(): Promise<ErrorResponse | OrderDto[]> {
+  public async all(@Request() request: R): Promise<DataOrError> {
+    const user = request.user.sub;
     return await Orders.QueryAllOrders({});
+  }
+}
+
+export type DataOrError = ErrorResponse<Empty> | OrdersDto;
+
+type R = {
+  user: {
+    sub: string
   }
 }
